--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,12 @@ body {
 #title {
   font-size: 8em;
   overflow: hidden;
-  animation: typing 3s steps(4,end);
+  animation: typing 4s steps(4,end);
+}
+
+.general-text{
+  text-align: center;
+  padding-top: 20em;
 }
 
 @keyframes typing {
@@ -24,23 +29,31 @@ body {
   justify-content: center;
 }
 
-button {
-  color: black;
-  background-color: white;
-  font-family: 'Courier New', Courier, monospace;
-  font-size:2em;
-  margin-top: 3em;
-}
-
-.response-div, .button-div{
+.response-div, .button-div {
   height: auto;
   width: 40%;
   text-align: center;
 }
 
-p {
+#placeholder {
   font-size: 2em;
-  margin-top: 3em;
+  margin-top: 4em;
+  margin-bottom: 4em;
+  position: absolute;
+}
+
+#button-element {
+  color: black;
+  background-color: white;
+  font-family: 'Courier New', Courier, monospace;
+  font-size:2em;
+  margin-top: 4em;
+  margin-bottom: 4em;
+}
+
+.large-space{
+  height:500em;
+  width:100%;
 }
 
 /* Alt styling for mobile */
@@ -55,12 +68,12 @@ p {
     align-items: stretch;
   }
 
-  .response-div, .button-div{
+  .response-div, .button-div {
     margin: 0em;
     width: 100%;
   }
 
-  p, button {
+  #placeholder, #button-element {
     margin-top: .5em
   }
 }
